--- a/UI/agent.html
+++ b/UI/agent.html
@@ -34,6 +34,10 @@
             <button class = "delete">Delete a file</button>
         </div>
 
+        <div class = "post-sold">
+            <button class = "sold">Sold</button>
+        </div>
+
         <div class="search-prop">
             <form action="update.html" method="post"></form>
             <input type = "number" name = "" placeholder = "Search Property">
