--- a/UI/agent.html
+++ b/UI/agent.html
@@ -40,7 +40,7 @@
 
         <div class="search-prop">
             <form action="update.html" method="post"></form>
-            <input type = "number" name = "" placeholder = "Search Property">
+            <input type = "text" name = "" placeholder = "Search Property">
             <input type="submit" name="" value = "Search">
         </div>
     </body>
