Form tags on both pages updated

--- a/UI/agent.html
+++ b/UI/agent.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="search-prop">
-            <form action="update.html" method="post"></form>
+            <form action="agent.html" method="post"></form>
             <input type = "text" name = "" placeholder = "Search Property">
             <input type="submit" name="" value = "Search">
         </div>
