--- a/UI/index.html
+++ b/UI/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <h1>PropertyPro-Lite.</h1>
             <div id = 'signup'>
-                <form action="registration.html" method="post"></form>
+                <form action="agent.html" method="post"></form>
                     <h2>Create a new account.</h2>
                     <input type = "text" name = "" placeholder = "Username">
                     <input type = "text" name = "" placeholder = "Email address">
@@ -24,7 +24,7 @@
 
         </div class = "box"> 
             <div id = "login">
-                    <form action="registration.html" method="post"></form>
+                    <form action="index.html" method="post"></form>
                     <input type = "text" name = "" placeholder = "Email address">
                     <input type = "password" name = "" placeholder = "Password">
                     <input type = "submit" name="" value = "LOGIN">
