--- a/UI/index.html
+++ b/UI/index.html
@@ -24,11 +24,11 @@
 
         </div class = "box"> 
             <div id = "login">
-                    <form action="html/agent.html" method="post">
+                 
                     <input type = "text" name = "" placeholder = "Email address">
                     <input type = "password" name = "" placeholder = "Password">
-                    <input type = "submit" name="" value = "LOGIN">
-                    </form>
+                        <a href='html/agent.html'> <input type = "submit" name="" value = "LOGIN"> </a>
+  
             </div> 
         </div> 
                       
