--- a/UI/html/signup.html
+++ b/UI/html/signup.html
@@ -11,8 +11,12 @@
     </head>
 
     <body>
-            <h1>Dashboard</h1>
-            <button type="submit"><a href="../index.html">dashboard</a></button>
+        <form action="#">
+            <label for="uname">username</label>
+            <input type="text" placeholder="Enter username" name="uname">
+            <label for="uname">password</label>
+            <input type="text" placeholder="Enter password" name="psw">
+            <button type="submit"><a href="../index.html">Signup</a></button>
         </form>
     </body>
 
