[ft-166722567 ft-166722568] Add login and signup pages with a style

--- a/UI/html/agent.html
+++ b/UI/html/agent.html
@@ -7,12 +7,12 @@
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono:300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fontawesome.com/icons/door-closed?style=solid">
-        <link rel = "stylesheet" href="css/style.css">
+        <link rel = "stylesheet" href="../css/style.css">
     </head>
 
     <body>
             <h1>Dashboard</h1>
-            <button type="submit"><a href="../index.html">dashboard</a></button>
+            <button type="submit"><a href="../index.html">Homepage</a></button>
         </form>
     </body>
 
