--- a/UI/html/signup.html
+++ b/UI/html/signup.html
@@ -7,16 +7,18 @@
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono:300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fontawesome.com/icons/door-closed?style=solid">
-        <link rel = "stylesheet" href="css/style.css">
+        <link rel = "stylesheet" href="../css/style.css">
     </head>
 
     <body>
-        <form action="#">
+        <form action="#" class="signup-container fg-primary">
             <label for="uname">username</label>
             <input type="text" placeholder="Enter username" name="uname">
+            <label for="number">email</label>
+            <input type="text" placeholder="email" name="psw">
             <label for="uname">password</label>
-            <input type="text" placeholder="Enter password" name="psw">
-            <button type="submit"><a href="../index.html">Signup</a></button>
+            <input type="text" placeholder="Enter password" name="email">
+            <button type="submit"><a href="agent.html">Signup</a></button>
         </form>
     </body>
 
