--- a/UI/index.html
+++ b/UI/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <ul>
                     <a href=""  class="logo"> Prolite </a>
-                    <li class="active"> <a href="/PropertyPro-lite/UI/html/login.html"> Login</a></li>
+                    <li class="active"> <a href="html/login.html"> Login</a></li>
                     <li> <a href=""> About-us</a></li>
                 </ul>
             </div>
@@ -24,7 +24,7 @@
 
         <section class="intro container padding-30-top-bottom center-align">
             <h1 class="fg-primary">About Us</h1>
-            <p class="margin-top"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus porro fugiat distinctio asperiores ad, architecto odio modi eligendi expedita, iure laboriosam iste quisquam neque reiciendis, accusamus reprehenderit earum perspiciatis iusto!</p>
+            <p class="margin-top"> PropertyPro-Lite provides home buyers, sellers, renters, and home value seekers with up-to-date real estate information, tools, and home listings across the US and Canada. Our website and mobile apps give consumers the information they need to find their first or next home, as well as innovative tools like Snap and Search, Homes.com Match and HomeShare to make the home search experience collaborative, simple and effective.</p>
         </section>
 
         <section class="intro container padding-30-top-bottom center-align">
