[ ] Update landing page, font, images and creating advert

--- a/UI/html/advert.html
+++ b/UI/html/advert.html
@@ -16,19 +16,24 @@
                 <div class="container">
                     <ul>
                         <a href="../index.html"  class="logo"> Prolite </a>
-                        <li class="active"> <a href="../index.html"> Home </a></li>
+                        <li class="active"> <a href=""> Home </a></li>
                     </ul>
                 </div>
         </nav>
 
         <form action="#" class="signup-container fg-primary">
-            <label for="uname">username</label>
-            <input type="text" placeholder="Enter username" name="uname">
-            <label for="number">email</label>
+            <label>Place</label>
+            <input type="text" placeholder="Enter place" name="uname">
+            <label>Value</label>
             <input type="text" placeholder="email" name="psw">
-            <label for="uname">password</label>
-            <input type="text" placeholder="Enter password" name="email">
-            <button type="submit"><a href="agent.html">Signup</a></button>
+            <label>Location</label>
+            <input type="text" placeholder="Enter location" name="email">
+            <label>Size</label>
+            <input type="text" placeholder="Enter size" name="email">
+            <label>Number of Bedrooms</label>
+            <input type="text" placeholder="Enter bedrooms" name="email">
+            <button type="submit"><a href="#">Upload</a></button>
+            <button type="submit"><a href="agent.html">Save</a></button>
         </form>
     </body>
 
