--- a/UI/html/login.html
+++ b/UI/html/login.html
@@ -6,11 +6,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono:300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fontawesome.com/icons/door-closed?style=solid">
         <link rel = "stylesheet" href="../css/style.css">
     </head>
 
     <body>
+        <nav class="wrapper top-depth">
+                <div class="container">
+                    <ul>
+                        <a href="../index.html"  class="logo"> Prolite </a>
+                        <li class="active"> <a href="../index.html"> Home </a></li>
+                    </ul>
+                </div>
+        </nav>
+        
         <div class="login-container fg-primary login">
             <form action="#">
                 <label for="uname">username</label>
