ch-update-landingpage-route-166722597 for users to view the complete property

--- a/UI/html/advert.html
+++ b/UI/html/advert.html
@@ -32,7 +32,7 @@
             <input type="text" placeholder="Enter size" name="email">
             <label>Number of Bedrooms</label>
             <input type="text" placeholder="Enter bedrooms" name="email">
-            <button type="submit"><a href="#">Upload</a></button>
+            <button type="submit"><a href="#">Upload Property Image</a></button>
             <button type="submit"><a href="agent.html">Save</a></button>
         </form>
     </body>
