--- a/UI/index.html
+++ b/UI/index.html
@@ -50,6 +50,7 @@
                         <h3 class="card-body-heading">Price: USD 50,000.</h3>
                         <h3 class="card-body-heading">lOCATION: UPPERHILL.</h3>
                         <h3 class="card-body-heading">BATHS: 8.</h3>
+                        <a href="../UI/html/listings.html"><h3 class="card-body-heading">view more >>><h3></a>
                     </div>
             </div>
 
@@ -62,6 +63,7 @@
                         <h3 class="card-body-heading">Price: USD 30,000.</h3>
                         <h3 class="card-body-heading">lOCATION: PARIS.</h3>
                         <h3 class="card-body-heading">BATHS: 1.</h3>
+                        <a href="../UI/html/listings.html"><h3 class="card-body-heading">view more >>><h3></a>
                     </div>
             </div>
 
@@ -74,6 +76,7 @@
                         <h3 class="card-body-heading">Price: USD 20,000.</h3>
                         <h3 class="card-body-heading">lOCATION: KITISURU.</h3>
                         <h3 class="card-body-heading">BATHS: 5.</h3>
+                        <a href="../UI/html/listings.html"><h3 class="card-body-heading">view more >>><h3></a>
                     </div>
             </div>
         </section>
@@ -88,6 +91,7 @@
                             <h3 class="card-body-heading">Price: USD 50,000.</h3>
                             <h3 class="card-body-heading">lOCATION: KAMPALA.</h3>
                             <h3 class="card-body-heading">BATHS: 7.</h3>
+                            <a href="../UI/html/listings.html"><h3 class="card-body-heading">view more >>><h3></a>
                         </div>
                 </div>
     
@@ -100,6 +104,7 @@
                             <h3 class="card-body-heading">Price: USD 10,000.</h3>
                             <h3 class="card-body-heading">lOCATION: DUBAI.</h3>
                             <h3 class="card-body-heading">BATHS: 1.</h3>
+                            <a href="../UI/html/listings.html"><h3 class="card-body-heading">view more >>><h3></a>
                         </div>
                 </div>
     
@@ -112,6 +117,7 @@
                             <h3 class="card-body-heading">Price: USD 160,000.</h3>
                             <h3 class="card-body-heading">lOCATION: DUBLIN.</h3>
                             <h3 class="card-body-heading">BATHS: 2.</h3>
+                            <a href="../UI/html/listings.html"><h3 class="card-body-heading">view more >>><h3></a>
                         </div>
                 </div>
         </section>
