--- a/UI/html/agent.html
+++ b/UI/html/agent.html
@@ -32,6 +32,7 @@
                         <h3 class="card-body-heading">Price: USD 50,000.</h3>
                         <h3 class="card-body-heading">lOCATION: UPPERHILL.</h3>
                         <h3 class="card-body-heading">BATHS: 8.</h3>
+                        <a href="update.html"><h3 class="card-body-heading">update >>><h3></a>
                     </div>
             </div>
 
@@ -44,6 +45,7 @@
                         <h3 class="card-body-heading">Price: USD 30,000.</h3>
                         <h3 class="card-body-heading">lOCATION: PARIS.</h3>
                         <h3 class="card-body-heading">BATHS: 1.</h3>
+                        <a href="update.html"><h3 class="card-body-heading">update >>><h3></a>
                     </div>
             </div>
 
@@ -56,6 +58,7 @@
                         <h3 class="card-body-heading">Price: USD 20,000.</h3>
                         <h3 class="card-body-heading">lOCATION: KITISURU.</h3>
                         <h3 class="card-body-heading">BATHS: 5.</h3>
+                        <a href="update.html"><h3 class="card-body-heading">update >>><h3></a>
                     </div>
             </div>
         </section>
@@ -70,6 +73,7 @@
                             <h3 class="card-body-heading">Price: USD 50,000.</h3>
                             <h3 class="card-body-heading">lOCATION: KAMPALA.</h3>
                             <h3 class="card-body-heading">BATHS: 7.</h3>
+                            <a href="update.html"><h3 class="card-body-heading">update >>><h3></a>
                         </div>
                 </div>
     
@@ -82,6 +86,7 @@
                             <h3 class="card-body-heading">Price: USD 10,000.</h3>
                             <h3 class="card-body-heading">lOCATION: DUBAI.</h3>
                             <h3 class="card-body-heading">BATHS: 1.</h3>
+                            <a href="update.html"><h3 class="card-body-heading">update >>><h3></a>
                         </div>
                 </div>
     
@@ -94,6 +99,7 @@
                             <h3 class="card-body-heading">Price: USD 160,000.</h3>
                             <h3 class="card-body-heading">lOCATION: DUBLIN.</h3>
                             <h3 class="card-body-heading">BATHS: 2.</h3>
+                            <a href="update.html"><h3 class="card-body-heading">update >>><h3></a>
                         </div>
                 </div>
         </section>
