--- a/UI/html/listings.html
+++ b/UI/html/listings.html
@@ -31,6 +31,7 @@
                         <h3 class="card-body-heading">Price: USD 10,000.</h3>
                         <h3 class="card-body-heading">lOCATION: DUBAI.</h3>
                         <h3 class="card-body-heading">BATHS: 1.</h3>
+                        <a href="../index.html"><h3 class="card-body-heading"> go back<<< <h3></a>
                     </div>
             </div>
 
