--- a/UI/html/update.html
+++ b/UI/html/update.html
@@ -30,6 +30,7 @@
                                 <h3 class="card-body-heading">Price: USD 10,000.</h3>
                                 <h3 class="card-body-heading">lOCATION: DUBAI.</h3>
                                 <h3 class="card-body-heading">BATHS: 1.</h3>
+                                <a href="agent.html"><h3 class="card-body-heading">dashboard <<<<h3></a>
                             </div>
                     </div>
 
