--- a/UI/html/agent.html
+++ b/UI/html/agent.html
@@ -16,8 +16,8 @@
                 <div class="container agent-font">
                     <ul>
                         <a href="../index.html"  class="logo"> Prolite </a>
-                        <li class="active"> <a href="../index.html"> Logout</a></li>
-                        <li><button type="submit"><a href="advert.html">Create advert</a></button></li>
+                        <li> <a href="../index.html"> Logout</a></li>
+                        <li><button type="submit"><a href="advert.html"><span>Create advert</span></a></button></li>
                     </ul>
                 </div>
         </nav>
