--- a/UI/index.html
+++ b/UI/index.html
@@ -17,8 +17,8 @@
             <div class="container">
                 <ul>
                     <a href="index.html"  class="logo"> Prolite </a>
-                    <li class="active"> <a href="html/login.html"> Login</a></li>
-                    <li> <a href="index.html"> About-us</a></li>
+                    <li> <a href="html/login.html"> Login</a></li>
+                    <li class="active"> <a href="#"> Home</a></li>
                 </ul>
             </div>
         </nav>
