--- a/UI/index.html
+++ b/UI/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono:300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fontawesome.com/icons/door-closed?style=solid">
         <link rel = "stylesheet" href="css/style.css">
     </head>
@@ -24,20 +25,17 @@
         </nav>
 
         <div class="banner">
-            <img src="../UI/assets/house9.jpg" alt="banner">
-        </div>
-
-        <div class="banner-tag container center-align">
-            <h1>Prolite.</h1>
+            <h1>Prolite</h1>
+            <h3>The best property site</h3>
         </div>
 
         <section class="intro container padding-30-top-bottom center-align about">
-            <h1 class="fg-primary">ABOUT US</h1>
+            <h1 class="neuch">ABOUT US</h1>
             <p class="margin-top"> PropertyPro-Lite provides home buyers, sellers, renters, and home value seekers with up-to-date real estate information, tools, and home listings across the US and Canada. Our website and mobile apps give consumers the information they need to find their first or next home, as well as innovative tools like Snap and Search, Homes.com Match and HomeShare to make the home search experience collaborative, simple and effective.</p>
         </section>
 
-        <section class="intro container padding-30-top-bottom center-align">
-            <h1 class="fg-primary">LISTINGS</h1>
+        <section class="intro container padding-30-top-bottom center-align about">
+            <h1 class="neuch">LISTINGS</h1>
         </section>
 
         <section class="intro container padding-30-top-bottom center-align flex">
