--- a/UI/index.html
+++ b/UI/index.html
@@ -23,10 +23,10 @@
                 </ul>
             </div>
         </nav>
-
+        
         <div class="banner">
-            <h1>Prolite</h1>
-            <h3>The best property site</h3>
+            <h1 class="container">Prolite</h1>
+            <h3 class="container">The best property website within Central Africa</h3>
         </div>
 
         <section class="intro container padding-30-top-bottom center-align about">
@@ -35,7 +35,7 @@
         </section>
 
         <section class="intro container padding-30-top-bottom center-align about">
-            <h1 class="neuch">LISTINGS</h1>
+            <h1 class="neuch">PROPERTY LISTINGS</h1>
         </section>
 
         <section class="intro container padding-30-top-bottom center-align flex">
