Bg{updating responsivity}

--- a/UI/html/advert.html
+++ b/UI/html/advert.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fontawesome.com/icons/door-closed?style=solid">
         <link rel = "stylesheet" href="../css/style.css">
+        <link rel = "stylesheet" href="../css/responsive.css">
     </head>
 
     <body>
@@ -21,7 +22,7 @@
                 </div>
         </nav>
 
-        <form action="#" class="signup-container fg-primary">
+        <form action="#" class="signup-container fg-primary createadvert-form">
             <label>Place</label>
             <input type="text" placeholder="Enter place" name="uname">
             <label>Value</label>
