--- a/UI/html/login.html
+++ b/UI/html/login.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fontawesome.com/icons/door-closed?style=solid">
         <link rel = "stylesheet" href="../css/style.css">
+        <link rel = "stylesheet" href="../css/responsive.css">
     </head>
 
     <body>
@@ -21,7 +22,7 @@
                 </div>
         </nav>
         
-        <div class="login-container fg-primary login">
+        <div class="login-container fg-primary login login-form">
             <form action="#">
                 <label for="uname">username</label>
                 <input type="text" placeholder="Enter username" name="uname">
