--- a/UI/html/update.html
+++ b/UI/html/update.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fontawesome.com/icons/door-closed?style=solid">
         <link rel = "stylesheet" href="../css/style.css">
+        <link rel = "stylesheet" href="../css/responsive.css">
     </head>
 
     <body>
