--- a/UI/index.html
+++ b/UI/index.html
@@ -4,12 +4,12 @@
     <head>
         <title>PropertyPro-Lite</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono:300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fontawesome.com/icons/door-closed?style=solid">
         <link rel = "stylesheet" href="css/style.css">
+        <link rel = "stylesheet" href="css/responsive.css">
     </head>
 
     <body>
