--- a/UI/html/agent.html
+++ b/UI/html/agent.html
@@ -13,10 +13,10 @@
     </head>
 
     <body>
-        <nav class="wrapper top-depth">
+        <nav class="wrapper top-depth advert-page">
                 <div class="container agent-font">
                     <ul>
-                        <a href="../index.html"  class="logo"> Prolite </a>
+                        <a href="../index.html"  class="logo logo-resp"> Prolite </a>
                         <li> <a href="../index.html"> Logout</a></li>
                         <li><button type="submit"><a href="advert.html"><span>Create advert</span></a></button></li>
                     </ul>
