--- a/UI/html/listings.html
+++ b/UI/html/listings.html
@@ -36,7 +36,7 @@
                     </div>
             </div>
 
-            <div class="login-container listings-update">
+            <div class="login-container listings-update listings-form">
                 <h2>Key features</h2>
                 <ol>
                     <li>4 Bedrooms</li>
