--- a/UI/html/signup.html
+++ b/UI/html/signup.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono:300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fontawesome.com/icons/door-closed?style=solid">
+        <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">
         <link rel = "stylesheet" href="../css/style.css">
         <link rel = "stylesheet" href="../css/responsive.css">
     </head>
@@ -22,6 +23,7 @@
                 </div>
         </nav>
 
+        <h3 class="form-headings">SIGNUP</h3>
         <form action="#" class="signup-container fg-primary signup-form">
             <label for="uname">username</label>
             <input type="text" placeholder="Enter username" name="uname">
