--- a/UI/html/listings.html
+++ b/UI/html/listings.html
@@ -29,10 +29,10 @@
                     </div>
 
                     <div class="card-body">
-                        <h3 class="card-body-heading">Price: USD 10,000.</h3>
-                        <h3 class="card-body-heading">lOCATION: DUBAI.</h3>
-                        <h3 class="card-body-heading">BATHS: 1.</h3>
-                        <a href="../index.html"><h3 class="card-body-heading"> go back<<< <h3></a>
+                        <h3 class="card-body-heading">USD 10,000.</h3>
+                        <h3 class="card-body-heading">FREEDOM SQUARE, HARARE, ZIMBABWE.</h3>
+                        <h3 class="card-body-heading">1 BEDROOM 2 BATHS</h3>
+                        <a href="../index.html"><h3 class="card-body-heading-back-link"> go back<<< <h3></a>
                     </div>
             </div>
 
